Fix disabled states in dark mode

--- a/_sass/react-styles/_pm-dropdown.scss
+++ b/_sass/react-styles/_pm-dropdown.scss
@@ -277,3 +277,18 @@
 		}
 	}
 }
+
+
+/* REMOVE THIS!! */
+/* REMOVE THIS!! */
+/* REMOVE THIS!! */
+.isDarkMode .dropDown-item {
+	&-button,
+	&-link {
+		&[disabled],
+		&.is-disabled {
+			@include button-disabled-state-dm;
+			border: none;
+		}
+	}
+}
